# krabs

./: .env.example  .gitignore  .krabs.json  AGENTS.md  CLAUDE.md  Cargo.toml  Makefile  README.md  SOUL.md  docker-compose.yml
app/: README.md
crates/krabs-cli/: Cargo.toml  README.md
crates/krabs-cli/src/: chat.rs  main.rs  setup.rs  user_input.rs
crates/krabs-cli/src/chat/: agent.rs  app.rs  commands.rs  mod.rs  render.rs  run.rs  types.rs
crates/krabs-core/: Cargo.toml  README.md  main.rs
crates/krabs-core/migrations/: 001_init.sql
crates/krabs-core/src/: lib.rs
crates/krabs-core/src/agents/: agent.rs  base_agent.rs  context.rs  factory.rs  minikrabs.rs  mod.rs  persona.rs  pool.rs
crates/krabs-core/src/agents/base_agent/: explorer.md  frontend_developer.md  planner.md
crates/krabs-core/src/config/: config.rs  credentials.rs  mod.rs
crates/krabs-core/src/hooks/: config.rs  hook.rs  langfuse.rs  mod.rs  registry.rs  telemetry.rs
crates/krabs-core/src/mcp/: client.rs  jsonrpc.rs  mcp.rs  mod.rs  tool.rs  transport.rs
crates/krabs-core/src/memory/: memory.rs  mod.rs
crates/krabs-core/src/permissions/: mod.rs  permissions.rs
crates/krabs-core/src/prompts/: mod.rs  system.rs
crates/krabs-core/src/prompts/system/: SOUL.md  SYSTEM_PROMPT.md
crates/krabs-core/src/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs  provider.rs
crates/krabs-core/src/router/: mod.rs
crates/krabs-core/src/sandbox/: config.rs  mod.rs  profile.rs  proxy.rs  tool.rs
crates/krabs-core/src/session/: mod.rs  session.rs
crates/krabs-core/src/skills/: fs_skill.rs  loader.rs  mod.rs  registry.rs  skill.rs
crates/krabs-core/src/tools/: bash.rs  delegate.rs  dispatch.rs  glob.rs  mod.rs  read.rs  read_skill.rs  registry.rs  tool.rs  user_input.rs  web_fetch.rs  write.rs
crates/krabs-gateway/: Cargo.toml
crates/krabs-gateway/src/: client.rs  config.rs  gateway.rs  main.rs  queue.rs
crates/krabs-gateway/src/platform/: mod.rs  slack.rs  telegram.rs  whatsapp.rs
crates/krabs-mcp/: Cargo.toml  README.md
crates/krabs-mcp/examples/: sse_server.rs  stdio_server.rs
crates/krabs-mcp/src/: lib.rs
crates/krabs-mcp/src/protocol/: jsonrpc.rs  types.rs
crates/krabs-mcp/src/server/: handler.rs  mod.rs  sse.rs  stdio.rs
crates/krabs-mcp/src/tools/: mod.rs  registry.rs  tool.rs
crates/krabs-mcp/src/tools/builtin/: echo.rs  mod.rs  web_fetch.rs  web_search.rs
crates/krabs-server/: Cargo.toml
crates/krabs-server/src/: auth.rs  config.rs  dto.rs  error.rs  event_bus.rs  hook.rs  lib.rs  state.rs
crates/krabs-server/src/routes/: agents.rs  chat.rs  config_api.rs  health.rs  history.rs  mod.rs  openapi.rs  sessions.rs  tools.rs
docker/: Dockerfile.gateway  Dockerfile.server  docker-compose.krabs.yml
docs/: TODO.md  config-schema.md  debugging-runbook.md  durable-execution-plan.md  multi-agent.md  server.md  tools.md  tracing-and-durable-execution.md
example/: basic_agent.rs
krabs/agents/: dev.md
