[package]
name = "krabs-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "krabs"
path = "src/main.rs"

[dependencies]
krabs-core = { path = "../krabs-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
rpassword = "7"
ratatui = "0.29"
crossterm = "0.28"
serde_json = "1.0.149"
