[package]
name = "krabs-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "krabs"
path = "src/main.rs"

[dependencies]
krabs-core = { path = "../krabs-core" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
dirs = "5"
rpassword = "7"
dotenvy = "0.15"
ratatui = { version = "0.29", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"
serde_json = "1.0.149"
