[package]
name = "krabs-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "krabs_core"
path = "src/lib.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "=0.3.31"
thiserror = "2"
glob = "0.3"
walkdir = "2"
regex = "1"
tracing = "0.1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
dirs = "5"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
serde_yaml = "0.9"
tempfile = "3"

[dev-dependencies]
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
