[package]
name = "krabs-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "krabs_server"
path = "src/lib.rs"

[[bin]]
name = "krabs-server"
path = "src/bin/main.rs"

[dependencies]
krabs-core = { path = "../krabs-core" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
utoipa = { version = "5", features = ["axum_extras"] }
async-trait = "0.1"
tokio-stream = "0.1"
tokio-util = "0.7"
futures-util = "=0.3.31"
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
reqwest = { version = "0.12", features = ["json"] }
